src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S32Underflow-StashIr.error
error: Value subceeds min limit of 's32'.
--> main.hs:7:17
  | 
7 |         return -2147483649;
  |                 ^^^^^^^^^^
